--- a/package.json
+++ b/package.json
@@ -2,11 +2,11 @@
   "private": true,
   "author": "cp3hnu <cp3hnu@gmail.com>",
   "scripts": {
-    "dev": "max dev",
     "build": "max build",
+    "dev": "max dev",
     "format": "prettier --cache --write .",
-    "prepare": "husky",
     "postinstall": "max setup",
+    "prepare": "husky",
     "setup": "max setup",
     "start": "npm run dev"
   },
@@ -27,6 +27,7 @@
     "add": "^2.0.6",
     "husky": "^9",
     "lint-staged": "^13.2.0",
+    "monaco-editor-webpack-plugin": "^7.1.0",
     "prettier": "^2.8.7",
     "prettier-plugin-organize-imports": "^3.2.2",
     "prettier-plugin-packagejson": "^2.4.3",
