build: 添加 vercel json 2

--- a/vercel.json
+++ b/vercel.json
@@ -1,6 +1,6 @@
 {
-  "buildCommand": "npm run build",
+  "buildCommand": "pnpm run build",
   "framework": null,
-  "installCommand": "npm install",
+  "installCommand": "pnpm install",
   "outputDirectory": "dist"
 }
